--- a/grad/index.html
+++ b/grad/index.html
@@ -301,6 +301,21 @@ In this talk, we will introduce the classical theory of $p$-divisible groups con
              In this talk, I will introduce their work and talk about what I have learned in order to read this paper.
             </div>
     </p>
+
+<p>
+        Dec 23, '25  
+        <b>Zijie Wen</b>, 
+        <a onclick="toggle_visibility('55');">
+        <i> Homological Stability of Deligne–Mumford Compactifications</i></a><br />   
+         <div id="55" class="toshow" style="display:none">
+             In this talk, I will focus on the asymptotic behavior of the homology of Deligne–Mumford compactifications $\overline{M}_{g,n}$ as the number of marked points $n$ grows large.
+             Our core question is: how do the dimension growth, symmetric group representation decomposition, and generating function properties of $H_i(\overline{M}_{g,n}, \mathbb{Q})$ behave when $n \gg 0$? 
+             To answer this, we will introduce the framework of representation stability and FSᵒᵖ-modules—contravariant functors from the category of finite sets and surjections to vector spaces.
+             We will see how Binary trees endows $\{H_i(\overline{M}_{g,n})\}$ with an FSᵒᵖ-module structure, and prove its finite generation.
+            </div>
+    </p>
+
+
     
 <h3>Talks in Spring 2025 (mostly Fridays 4:20 in M5024)</h3>
 
