--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -287,7 +287,7 @@
 
 <p>Fri Dec 12, '25, Yanche Wu and <b>Xiuyuan Yang</b>, <a href="/undergrad/25fal/Yang–Wu.pdf" target="_blank"><i>Poincaré homology sphere</i></a> (<i>engineering</i>, p. 28 onwards)</p>
 
-<p>Thu Dec 18, '25, <b>Hongli Ye</b>, <i>Minimal surfaces (context and theory)</i></p>
+<p>Thu Dec 18, '25, <b>Hongli Ye</b>, <i><a href="/undergrad/25fal/Ye.pdf" target="_blank">Minimal surfaces</a> (context and theory)</i></p>
 
 <p>Fri Dec 26, '25, <b>Hongli Ye</b>, <i>Minimal surfaces (engineering)</i></p>
 
