--- a/grad/index.html
+++ b/grad/index.html
@@ -168,6 +168,24 @@
     </p>
 -->
 
+<h3>Talks in Spring 2026</h3>
+
+    <p>
+        Jan 12, '25 (<b>4:30–5:30 in M5024</b>) 
+        <b>Jiacheng Liang</b> (Johns Hopkins University), 
+        <a onclick="toggle_visibility('56');">
+        <i>Dualizable additive $\infty$-categories</i></a><br />
+        <div id="56" class="toshow" style="display:none">   
+            In this talk, I will describe the work in progress with Ishan Levy and Vova Sosnilo about dualizable additive $\infty$-categories and prove that dualizable 
+            additive $\infty$-categories are precisely those separated Grothendieck prestable $\infty$-categories satisfying AB4$^*$ and AB6 [<i>from Grothendieck's 
+            Tôhoku paper – Y.Z.</i>]. We also prove that a dualizable additive $\infty$-category can always be written as the $\infty$-category of connective almost 
+            modules over an almost connective ${\mathbb E}_1$-ring in the sense of Hebestreit–Scholze. Furthermore we introduce prestable motives and the prestable 
+            K-theory.
+        </div>
+    </p>
+
+
+
 <h3>Talks in Fall 2025 (Tuesdays 4:30–5:30 in Lecture Hall 3-204)</h3>
 
     <p>
