--- a/grad/index.html
+++ b/grad/index.html
@@ -85,6 +85,7 @@
                         <li><a  href="/index.html" title="" target="_blank">Home</a></li>
                         <li><a href="/acts" title="" target="_blank">Appl. Comput. Topol. Seminar</a></li>
                         <li><a href="/undergrad" title="" target="_blank">Undergraduate Seminar</a></li>
+                        <li><a href="#2025">2025</a></li>
                         <li><a href="#2024">2024</a></li>
                         <li><a href="#2023">2023</a></li>
                         <li><a href="#2022">2022</a></li>
@@ -186,7 +187,7 @@
 
 
 
-<h3>Talks in Fall 2025 (Tuesdays 4:30–5:30 in Lecture Hall 3-204)</h3>
+<h3><a id="2025"></a>Talks in Fall 2025 (Tuesdays 4:30–5:30 in Lecture Hall 3-204)</h3>
 
     <p>
         Oct 14, '25  
