--- a/acts/index.html
+++ b/acts/index.html
@@ -197,7 +197,7 @@
                     <div class="s-footer__copyright">
                         <span>© Copyright Philosophy 2026</span> 
                         <span>Site Template by <a href="https://colorlib.com/" target="_blank">Colorlib</a></span>
-                        <span>Cover art by Feng Xiao-Min, <i>Composition N°28.8.25</i>, 2025</span>
+                        <span>Cover art by Feng Xiao-Min, <i>Composition N°28.8.25</i></span>
                     </div>
 
                     <div class="go-top">
