--- a/grad/index.html
+++ b/grad/index.html
@@ -169,7 +169,7 @@
     </p>
 -->
 
-<h3>Talks in Spring 2026</h3>
+<h3>Talks in Spring 2026 (mostly Thurdays 3:30–4:30 in Lecture Hall 3-204)</h3>
 
     <p>
         Jan 12, '26 (<b>4:30–5:30 in M5024</b>) 
