--- a/grad/index.html
+++ b/grad/index.html
@@ -169,7 +169,7 @@
     </p>
 -->
 
-<h3>Talks in Spring 2026 (mostly Thurdays 3:30–4:30 in Lecture Hall 3-204)</h3>
+<h3>Talks in Spring 2026 (Thurdays 3:30–4:30 in Lecture Hall 3-204)</h3>
 
     <p>
         Jan 12, '26 (<b>4:30–5:30 in M5024</b>) 
@@ -186,6 +186,18 @@
     </p>
 
 
+    <p>
+        Mar 5,'26
+         <b>Qingrui Qu</b>, 
+        <a onclick="toggle_visibility('57');">
+        <i>TBA</i></a><br />
+    </p>
+
+
+
+
+
+    
 
 <h3><a id="2025"></a>Talks in Fall 2025 (Tuesdays 4:30–5:30 in Lecture Hall 3-204)</h3>
 
