--- a/grad/index.html
+++ b/grad/index.html
@@ -193,9 +193,19 @@
         <i>TBA</i></a><br />
     </p>
 
+    <p>
+        Mar 12,'26
+         <b>Wenhui Yang</b>, 
+        <a onclick="toggle_visibility('58');">
+        <i>TBA</i></a><br />
+    </p>
 
-
-
+    <p>
+        Mar 19,'26
+         <b>Chunshuang Yin</b>, 
+        <a onclick="toggle_visibility('59');">
+        <i>TBA</i></a><br />
+    </p>
 
     
 
