--- a/grad/index.html
+++ b/grad/index.html
@@ -187,27 +187,74 @@
 
 
     <p>
-        Mar 5,'26
+        Mar 5, '26
          <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('57');">
         <i>TBA</i></a><br />
     </p>
 
     <p>
-        Mar 12,'26
+        Mar 12, '26
          <b>Wenhui Yang</b>, 
         <a onclick="toggle_visibility('58');">
         <i>TBA</i></a><br />
     </p>
 
     <p>
-        Mar 19,'26
+        Mar 19, '26
          <b>Chunshuang Yin</b>, 
         <a onclick="toggle_visibility('59');">
         <i>TBA</i></a><br />
     </p>
 
-    
+    <p>
+        Mar 26, '26
+         <b>Xiansheng Li</b>, 
+        <a onclick="toggle_visibility('60');">
+        <i>TBA</i></a><br />
+    </p>
+
+    <p>
+        Apr 9, '26
+         <b>Zhou Fang</b>, 
+        <a onclick="toggle_visibility('61');">
+        <i>TBA</i></a><br />
+    </p>
+
+    <p>
+        Apr 16, '26
+         <b>Qianyi Zhang</b>, 
+        <a onclick="toggle_visibility('62');">
+        <i>TBA</i></a><br />
+    </p>
+
+    <p>
+        Apr 23, '26
+         <b>Zijie Wen</b>, 
+        <a onclick="toggle_visibility('63');">
+        <i>TBA</i></a><br />
+    </p>
+
+    <p>
+        May 7, '26
+         <b>Chunshuang Yin</b>, 
+        <a onclick="toggle_visibility('64');">
+        <i>TBA</i></a><br />
+    </p>
+
+    <p>
+        May 14, '26
+         <b>Minghao Li</b>, 
+        <a onclick="toggle_visibility('65');">
+        <i>TBA</i></a><br />
+    </p>
+
+    <p>
+        Jun 4, '26
+         <b>Chunshuang Yin</b>, 
+        <a onclick="toggle_visibility('66');">
+        <i>TBA</i></a><br />
+    </p>
 
 <h3><a id="2025"></a>Talks in Fall 2025 (Tuesdays 4:30–5:30 in Lecture Hall 3-204)</h3>
 
